--- a/src/static/css/header.css
+++ b/src/static/css/header.css
@@ -1,6 +1,8 @@
 .header {
     width: 100%;
     height: 80px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px -6px #5a5a5a;
 }
 
 .my-navbar {
