--- a/src/static/css/resume.css
+++ b/src/static/css/resume.css
@@ -1,9 +1,3 @@
-.resume {
-}
-
-.resume .resume-menu {
-}
-
 .resume .resume-menu ul {
     padding-left: 0;
     list-style: none;
@@ -41,6 +35,7 @@
 .menu-content .menu-content-header {
     background-color: #ffffff;
     color: #00a8ff;
+    font-weight: 600;
 }
 
 .resume .menu-content .menu-content-badge {
@@ -51,12 +46,27 @@
 
 .menu-content .menu-content-text {
     padding-top: 10px;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 300;
+}
+
+.resume-experience .experience-title {
+    font-weight: 400;
     font-size: 14px;
-    line-height: 1;
+    color: #313131;
+}
+
+.resume-experience .experience-text {
+    font-weight: 300;
+    font-size: 13px;
 }
 
 .resume-skills .skills-header {
     color: #00a8ff;
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: 500;
 }
 
 .resume-skills .resume-skills-progress {
