added api request

--- a/src/static/css/header.css
+++ b/src/static/css/header.css
@@ -37,7 +37,7 @@
     content: "";
     height: 40px;
     width: 40px;
-    top: 0px;
+    top: 0;
     right: 50%;
     transform: translateX(50%);
     border-radius: 50%;
