--- a/src/static/css/project.css
+++ b/src/static/css/project.css
@@ -1,10 +1,9 @@
 .project {
-
+    min-height: calc(100vh - 225px);
 }
 
 .project-type .project-type-ul {
     list-style: none;
-    display: flex;
     justify-content: center;
     padding: 0;
 }
