--- a/src/static/css/about_section.css
+++ b/src/static/css/about_section.css
@@ -1,5 +1,4 @@
 .about-section {
-    height: calc(100vh - 165px);
     width: 100%;
     box-shadow: 0 0 10px -6px #5a5a5a;
 }
@@ -50,6 +49,7 @@
 
 .about-content .about-content-right {
     text-align: left;
+    word-break: break-all;
 }
 
 .about-details .download-btn {
