--- a/src/static/css/banner_section.css
+++ b/src/static/css/banner_section.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     color: #ffffff;
     font-weight: 600;
 }
