--- a/src/static/css/banner_section.css
+++ b/src/static/css/banner_section.css
@@ -1,6 +1,6 @@
 .banner-section {
     height: calc(100vh - 80px);
-    background-image: url('../images/banner_image.png');
+    background-image: url('../images/banner.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
